[project]
name = "modcabinet"
version = "1.0.0"
authors = [{ name = "Ty-Gone" }]
description = """\
An in-game Mod Cabinet for Borderlands 2.\n
Provides a dedicated UI for browsing, installing, and managing BL2 Python SDK mods
without modifying the default willow2_mod_menu.
"""
dependencies = []

[tool.sdkmod]
name = "Mod Cabinet"
coop_support = "Unknown"
license = { name = "MIT", url = "https://choosealicense.com/licenses/mit/" }
download = "https://github.com/mantorofficial/Bl2-ModCabine/raw/refs/heads/main/ModCabinetStore.sdkmod
