[project]
name = "Bl2ModCabinet"
version = "1.0.0"
authors = [{ name = "Ty-Gone" }]

description = """\
An in-game Mod Cabinet for Borderlands 2.\n
Provides a dedicated UI for browsing, installing, and managing BL2 Python SDK mods
Make sure to press Q to refrsh so that your old mods get registered
"""
dependencies = []

[tool.sdkmod]
name = "Mod Cabinet"
coop_support = "Client Side"
license = { name = "MIT", url = "https://choosealicense.com/licenses/mit/" }
download = "https://github.com/mantorofficial/Bl2-ModCabinet/raw/refs/heads/main/ModCabinetStore.sdkmod"
author: Ty-gone
